--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@wix/ecom": "^1.0.603",
     "@wix/sdk": "^1.10.2",
     "@wix/wix-ui-icons-common": "^3.16.0",
+    "jose": "^6.1.0",
     "jsonwebtoken": "^9.0.2",
     "next": "14.0.4",
     "react": "^18",
