--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.75.0",
     "@tanstack/react-query": "^5.17.19",
+    "@wix/app-management": "^1.0.122",
     "@wix/dashboard": "^1.3.7",
     "@wix/design-system": "^1.85.0",
     "@wix/ecom": "^1.0.1195",
