storing site currenty when onInstall webhook triggered

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@wix/ecom": "^1.0.1195",
     "@wix/sdk": "^1.10.2",
     "@wix/site": "^1.23.0",
+    "@wix/site-site": "^1.26.0",
     "@wix/stores": "^1.0.120",
     "@wix/wix-ui-icons-common": "^3.16.0",
     "jose": "^6.1.0",
